# lyra2m-cpuminer-src

./: Makefile.am  Makefile.in  README.md  configure  cpu-miner.c  cpuminer-conf.json  miner.h  util.c
algo/: lyra2rev2.c
autom4te.cache/: output.1  requests  traces.1
